<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CaptureActivity">

    <Button
        android:id="@+id/btnCapture"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:background="@drawable/btn_rounded"
        android:padding="20dp"
        android:text="@string/capture"
        android:textColor="@android:color/white"
        android:textColorHighlight="@color/colorAccent"
        android:textColorHint="@color/colorAccent"
        android:textColorLink="@color/colorAccent"
        app:layout_constraintBottom_toBottomOf="@+id/btnDelete"
        app:layout_constraintEnd_toStartOf="@+id/btnBack"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/btnDelete"
        app:layout_constraintTop_toTopOf="@+id/btnDelete" />

    <Button
        android:id="@+id/btnDelete"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:background="@drawable/btn_rounded"
        android:padding="20dp"
        android:text="@string/delete"
        android:textColor="@android:color/white"
        android:textColorHighlight="@color/colorAccent"
        android:textColorHint="@color/colorAccent"
        android:textColorLink="@color/colorAccent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/btnCapture"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/videoView" />

    <Button
        android:id="@+id/btnBack"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:background="@drawable/btn_rounded"
        android:padding="20dp"
        android:text="@string/back"
        android:textColor="@android:color/white"
        android:textColorHighlight="@color/colorAccent"
        android:textColorHint="@color/colorAccent"
        android:textColorLink="@color/colorAccent"
        app:layout_constraintBottom_toBottomOf="@+id/btnCapture"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/btnCapture"
        app:layout_constraintTop_toTopOf="@+id/btnCapture" />

    <VideoView
        android:id="@+id/videoView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_margin="10dp"
        app:layout_constraintBottom_toTopOf="@+id/btnCapture"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>